deploy/kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-probes-tester
  namespace: training
  labels:
    app: k8s-probes-tester
spec:
  containers:
  - name: k8s-probes-tester
    image: gregorymarti/k8s-probes-tester:v1.0.2
    imagePullPolicy: IfNotPresent # tag immutability
    ports:
    - containerPort: 8080
