deploy/kubernetes/pod_configmap_secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-probes-tester
  namespace: training
  labels:
    app: k8s-probes-tester
spec:
  containers:
  - name: k8s-probes-tester
    image: nginx
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080
    volumeMounts:
    - mountPath: /app
      name: log-config
  volumes:
  - configMap:
      name: k8s-probes-tester-logs
      items:
        - key: logback.xml
          path: logback.xml
    name: log-config
